@@ -1,3 +1,9 @@
+2008-08-23  Jens Granseuer  <jensgr@gmx.net>
+
+	* eggcellrendererkeys.c:
+	* gnome-keybinding-properties.glade: don't use the term "accelerator"
+	in the UI (bug #547276)
+
 2008-07-26  Jens Granseuer  <jensgr@gmx.net>
 
 	Based on a patch by: Denis Washington <denisw@svn.gnome.org>
